--- a/.github/workflows/openshift.yml
+++ b/.github/workflows/openshift.yml
@@ -53,6 +53,8 @@ jobs:
         registry: ${{ env.IMAGE_REGISTRY }}
         username: ${{ env.REGISTRY_USER }}
         password: ${{ env.REGISTRY_PASSWORD }}
+        tls-verify: false
+        
 
     # The path the image was pushed to is now stored in ${{ steps.push-to-registry.outputs.registry-path }}
 
