--- a/.github/workflows/openshift.yml
+++ b/.github/workflows/openshift.yml
@@ -55,6 +55,8 @@ jobs:
         password: ${{ env.REGISTRY_PASSWORD }}
         tls-verify: false
         
+    - name: Print image url
+      run: echo "Image pushed to ${{ steps.push-to-quay.outputs.registry-paths }}"   
 
     # The path the image was pushed to is now stored in ${{ steps.push-to-registry.outputs.registry-path }}
 
