--- a/.github/workflows/openshift.yml
+++ b/.github/workflows/openshift.yml
@@ -2,7 +2,8 @@ name: OpenShift
 
 env: 
   IMAGE_REGISTRY: ghcr.io/${{ github.repository_owner }}
-  REGISTRY_USER: ${{ github.actor }}
+  ##REGISTRY_USER: ${{ github.actor }}
+  REGISTRY_USER: pockyandritz
   REGISTRY_PASSWORD: ${{ github.token }}
   APP_NAME: nationalparks
   IMAGE_TAGS: latest ${{ github.sha }}
